@@ -47,7 +47,7 @@
 	{
 		global $DB,$DB_TYPE;
 
-		echo $query,"<br>";
+//		echo $query,"<br>";
 
 		if($DB_TYPE == "MYSQL")
 		{
